--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pulse</title>
-    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="css/font.css">
-    <link rel="stylesheet" type="text/css" href="css/slick.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
-    <section class="promo">
+    <section id="up" class="promo">
         <div class="container">
             <header class="header">
                 <a href="#" class="header__logo">
@@ -61,7 +58,7 @@
             <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
             <div class="advantages__wrapper">
                 <div class="advantages__item">
-                    <img src="icons/advantages/cup.png" alt="cup" class="advantages__icon">
+                    <img src="icons/advantages/cup.png" alt="cup" class="advantages__icon ">
                     <div class="advantages__subtitle">
                         Делимся опытом
                     </div>
@@ -71,7 +68,8 @@
                     </div>
                 </div>
                 <div class="advantages__item">
-                    <img src="icons/advantages/heart.png" alt="heart" class="advantages__icon">
+                    <img src="icons/advantages/heart.png" alt="heart"
+                        class="advantages__icon advantages__icon-animated">
                     <div class="advantages__subtitle">
                         Заботимся о здоровье
                     </div>
@@ -114,7 +112,7 @@
             </form>
         </div>
     </section>
-    <section class="carousel">
+    <div class="carousel">
         <div class="container">
             <div class="carousel__inner">
                 <div><img src="img/slide_1.jpg" alt="slide1"></div>
@@ -122,7 +120,7 @@
                 <div><img src="img/slide_3.jpg" alt="slide3"></div>
             </div>
         </div>
-    </section>
+    </div>
     <section class="catalog">
         <div class="container">
             <h2 class="title">Каталог пульсометров</h2>
@@ -446,8 +444,8 @@
     <section class="feed">
         <div class="container">
             <h2 class="title">отзывы клиентов</h2>
-            <div class="feed__item">
-                <img src="img/feed_1.png" alt="Ирина Иванченко" class="feed__img">
+            <div class="feed__item fadeInUp wow data-wow-duration=" 1.2s" data-wow-delay="0.8s"">
+                <img src=" img/feed_1.png" alt="Ирина Иванченко" class="feed__img">
                 <div class="feed__text">
                     <div class="feed__subtitle">Ирина Иванченко</div>
                     <div class="feed__count">2 полумарафона</div>
@@ -462,8 +460,8 @@
                     </div>
                 </div>
             </div>
-            <div class="feed__item">
-                <img src="img/feed_2.png" alt="Иван Сёмочкин" class="feed__img">
+            <div class="feed__item fadeInUp wow data-wow-duration=" 1.2s" data-wow-delay="0.8s"">
+                <img src=" img/feed_2.png" alt="Иван Сёмочкин" class="feed__img">
                 <div class="feed__text">
                     <div class="feed__subtitle">Иван Сёмочкин</div>
                     <div class="feed__count">1 полумарафон</div>
@@ -477,8 +475,8 @@
                     </div>
                 </div>
             </div>
-            <div class="feed__item">
-                <img src="img/feed_3.png" alt="Юлия Дашкина" class="feed__img">
+            <div class="feed__item fadeInUp wow data-wow-duration=" 1.2s" data-wow-delay="0.8s"">
+                <img src=" img/feed_3.png" alt="Юлия Дашкина" class="feed__img">
                 <div class="feed__text">
                     <div class="feed__subtitle">Юлия Дашкина</div>
                     <div class="feed__count">2 полумарафона</div>
@@ -499,8 +497,7 @@
     <footer class="footer">
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.430307459425!2d37.644807316398506!3d55.768397998255864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCAxMDcwNzg!5e0!3m2!1sru!2sru!4v1653719603173!5m2!1sru!2sru"
-            width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <div class="footer__info">
             <address class="footer__addr">Москва, Мясницкий проезд, д.3с1</address>
             <a class="footer__phone" href="tel:84999228974">8 (499) 922-89-74</a>
@@ -541,12 +538,16 @@
                 в ближайшее время!</div>
         </div>
     </div>
+    <a href="#up" class="pageup">
+        <img src="icons/up.svg" alt="up">
+    </a>
 
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="js/slick.min.js"></script>
-    <script type="text/javascript" src="js/jquery.validate.min.js"></script>
-    <script type="text/javascript" src="js/jquery.maskedinput.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.maskedinput.min.js"></script>
+    <script src="js/wow.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 
