--- a/src/index.html
+++ b/src/index.html
@@ -444,7 +444,7 @@
     <section class="feed">
         <div class="container">
             <h2 class="title">отзывы клиентов</h2>
-            <div class="feed__item fadeInUp wow data-wow-duration=" 1.2s" data-wow-delay="0.8s"">
+            <div class="feed__item fadeInUp wow" data-wow-duration="1.2s" data-wow-delay="0.8s">
                 <img src=" img/feed_1.png" alt="Ирина Иванченко" class="feed__img">
                 <div class="feed__text">
                     <div class="feed__subtitle">Ирина Иванченко</div>
@@ -460,7 +460,7 @@
                     </div>
                 </div>
             </div>
-            <div class="feed__item fadeInUp wow data-wow-duration=" 1.2s" data-wow-delay="0.8s"">
+            <div class="feed__item fadeInUp wow" data-wow-duration="1.2s" data-wow-delay="0.8s">
                 <img src=" img/feed_2.png" alt="Иван Сёмочкин" class="feed__img">
                 <div class="feed__text">
                     <div class="feed__subtitle">Иван Сёмочкин</div>
@@ -475,7 +475,7 @@
                     </div>
                 </div>
             </div>
-            <div class="feed__item fadeInUp wow data-wow-duration=" 1.2s" data-wow-delay="0.8s"">
+            <div class="feed__item fadeInUp wow" data-wow-duration="1.2s" data-wow-delay="0.8s">
                 <img src=" img/feed_3.png" alt="Юлия Дашкина" class="feed__img">
                 <div class="feed__text">
                     <div class="feed__subtitle">Юлия Дашкина</div>
